# hftool

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  PHASE2_IMPLEMENTATION.md  PHASE2_REVIEW.md  PHASE3_IMPLEMENTATION.md  PHASE3_REVIEW.md  PHASE4_IMPLEMENTATION.md  PHASE4_REVIEW.md  README.html  README.md  SECURITY_FIXES.md  install.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  model_request.md
.github/workflows/: ci.yml  publish.yml
docker/: Dockerfile.cpu  Dockerfile.cuda  Dockerfile.rocm  README.md  docker-compose.yml
docs/: README.md  configuration.md  environment.md  gpu-setup.md
hftool/: __init__.py  __main__.py  cli.py
hftool/core/: __init__.py  batch.py  benchmark.py  completion.py  config.py  device.py  doctor.py  download.py  history.py  metadata.py  models.py  parameters.py  registry.py
hftool/io/: __init__.py  file_picker.py  input_loader.py  interactive_input.py  interactive_mode.py  output_handler.py
hftool/tasks/: __init__.py  base.py  image_to_image.py  speech_to_text.py  text_to_image.py  text_to_speech.py  text_to_video.py  transformers_generic.py
hftool/utils/: __init__.py  deps.py  docker.py  errors.py  progress.py
tests/: VIDEO_REGRESSION_TESTS.md  __init__.py  test_batch.py  test_benchmark.py  test_completion.py  test_config.py  test_config_integration.py  test_core.py  test_errors.py  test_file_picker.py  test_history.py  test_interactive_input.py  test_interactive_mode.py  test_io.py  test_metadata.py  test_progress.py  test_text_to_video.py  test_utils.py
